[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
Hompage = "https://github.com/ale94mleon/moldrug"
Documentation = "https://moldrug.readthedocs.io/en/latest/"
Discussions = "https://github.com/ale94mleon/moldrug/discussions"
Issues = "https://github.com/ale94mleon/moldrug/issues"
Changelog = "https://github.com/ale94mleon/MolDrug/blob/main/docs/source/CHANGELOG.md"

[project]
name = "moldrug"
dynamic = ["version"]
description = "MolDrug (from Molecule to Drug) is a python package for drug-oriented optimization on the chemical space."
readme = "README.rst"

authors=[
    {name="Alejandro Martínez-León", email="ale94mleon@gmail.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design",
    "chemoinformatics",
    "genetic algorithm",
]

requires-python = ">= 3.8 , < 3.12"
dependencies = [
    "crem",
    "tqdm",
    "numpy",
    "pandas",
    "pyyaml",
    "dill",
    "meeko>=0.4.0",
    "six",
    "bio",
    "rdkit>=2022.3.5",
    "scipy",  # a meeko dependency
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = ["requests", "pytest"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}"
dirty = "{base_version}"
distance-dirty = "{base_version}"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/moldrug/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moldrug = [
    "LICENSE",
    "README.rst",
    "data/*/*.yml",
    "data/*/*.mol",
    "data/*/*.smi",
    "data/*/*.pdb",
    "data/*/*.pdbqt",

]

[project.scripts]
moldrug = "moldrug.cli:__moldrug_cmd"
constrainconf_moldrug = "moldrug.cli:__constraintconf_cmd"