[build-system]
requires = [
    "setuptools>=77.0.0",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.9 , < 3.14"
name = "moldrug"
dynamic = ["version"]
description = "moldrug is a python package for drug-oriented optimization on the chemical space."
readme = "README.rst"
license-files = ["LICENSE"]

authors = [
    { name = "Alejandro Martínez León", email = "ale94mleon@gmail.com" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design",
    "chemoinformatics",
    "genetic algorithm",
]

dependencies = [
    "crem",
    "tqdm",
    "numpy",
    "pandas",
    "pyyaml",
    "dill",
    "meeko @ git+https://github.com/ale94mleon/meeko.git@main",
    "scipy",  # a meeko dependency
    "six",
    "rdkit>=2022.3.5",
]

[project.optional-dependencies]
dev = ["requests", "pytest", "dask[distributed]", "dask-jobqueue"]
cluster = ["dask[distributed]", "dask-jobqueue"]

[project.urls]
Homepage = "https://github.com/ale94mleon/moldrug"
Documentation = "https://moldrug.readthedocs.io/en/latest/"
Discussions = "https://github.com/ale94mleon/moldrug/discussions"
Issues = "https://github.com/ale94mleon/moldrug/issues"
Changelog = "https://github.com/ale94mleon/moldrug/blob/main/docs/source/CHANGELOG.md"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}.post{distance}"
dirty = "{base_version}.post{distance}.dev0"
distance-dirty = "{base_version}.post{distance}.dev0"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/moldrug/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
moldrug = [
    "data/*/*.yml",
    "data/*/*.mol",
    "data/*/*.smi",
    "data/*/*.pdb",
    "data/*/*.pdbqt",
]

[project.scripts]
moldrug = "moldrug.cli:__moldrug_cmd"
constrainconf_moldrug = "moldrug.cli:__constraintconf_cmd"