[metadata]
name = lead
version = 0.0.1
author = 'Alejandro Martínez León'
author_email = 'ale94melon@gmail.com'
description = 'A python package for lead generation and optimization of small molecules'
long_description = file: README.md
long_description_content_type = 'text/markdown'
url = 'https://github.com/ale94mleon/lead'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: Linux

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    crem
    tqdm
    numpy
    panda
    sklearn
    requests
    pytest
