[metadata]
name = moldrug
version = 0.0.1-beta5
author = Alejandro Martínez León
author_email = ale94mleon@gmail.com
description = A python package for moldrug generation and optimization of small molecules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ale94mleon/moldrug
license = Apache License 2.0
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.7, < 4
include_package_data = True
install_requires =
    crem >= 0.2.9
    tqdm >= 4.64.0
    numpy >= 1.22.0
    pandas >= 1.4.2
    sklearn
[options.extras_require]
test = 
    requests
    pytest
rdkit = 
    rdkit >=2020
openbabel = 
    openbabel >= 3.1.0

