[metadata]
name = moldrug
version = attr: moldrug.__version__
author = Alejandro Martínez León
author_email = ale94mleon@gmail.com
description = A python package for moldrug generation and optimization of small molecules
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ale94mleon/moldrug
project_urls =
    Discussions = https://github.com/ale94mleon/moldrug/discussions
    Documentation = https://moldrug.readthedocs.io/en/latest/
    Issues = https://github.com/ale94mleon/moldrug/issues
license = Apache License 2.0
license_files = LICENSE
platforms = linux
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    biology
    drug-design
    chemoinformatics
    genetic algorithm

[options]
packages = find:
python_requires = >= 3.8, < 4
include_package_data = True
install_requires =
    crem
    tqdm
    numpy
    pandas
    pyyaml
    meeko
    scipy
    six
[options.extras_require]
test =
    requests
    pytest
rdkit =
    rdkit >= 2020
[options.entry_points]
console_scripts =
    moldrug = moldrug.cli:moldrug_cmd